feat: portable setup - publish NM image, project config via Settings UI
- Publish neural-memory Docker image to ghcr.io (no source code needed)
- docker-compose uses image: instead of build: for neural-memory
- Make claude data mount configurable via CLAUDE_DATA_DIR env var
- Remove hardcoded user paths from companion project-profiles
- Add companion REST API for project CRUD (POST/PUT/DELETE)
- Add "Claude Code Projects" section in Settings page
- Users can add/edit/delete projects with name, dir, model, permission
- Delete auto-exported PB migrations (hardcoded IDs break fresh installs)
- Gitignore companion/data/ (user-specific config)

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ coverage/
 playwright-report/
 test-results/
 
+# Companion data (user-specific config, sessions)
+companion/data/
+
 # Misc
 *.log
 *.tsbuildinfo
