--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - pb_data:/pb/pb_data
       - ./pocketbase/pb_hooks:/pb/pb_hooks
       - ./pocketbase/pb_migrations:/pb/pb_migrations
-      - C:/Users/X/.claude:/pb/import/claude:ro
+      - ${CLAUDE_DATA_DIR:-~/.claude}:/pb/import/claude:ro
     environment:
       - NM_URL=http://neural-memory:8000
       - MYTREND_SYNC_USER_ID=873bodab6pacp1u
@@ -20,9 +20,7 @@ services:
       retries: 3
 
   neural-memory:
-    build:
-      context: ../neural-memory
-      dockerfile: Dockerfile
+    image: ghcr.io/nhadaututtheky/neural-memory:latest
     container_name: mytrend-nm
     restart: unless-stopped
     ports:
