feat: dockerize companion service for single docker-compose up deployment
- Add companion/Dockerfile (Bun + Node.js 22 + Claude CLI)
- Add companion service to docker-compose.yml with volume mounts
- Add nginx proxy routes for companion REST + WebSocket
- Update start.bat: remove separate companion window in Docker modes
- Make PORT env-configurable in companion/src/index.ts
- Update .env.example with CLAUDE_CONFIG_DIR and Telegram vars

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,13 @@ NM_DATA_DIR=./nm_data
 # Claude Hub (optional - needed for direct API chat)
 ANTHROPIC_API_KEY=
 
-# Vibe Companion (optional - run with: docker compose --profile companion up)
-COMPANION_PORT=3456
+# Vibe Companion (Docker mode)
+# Path to your Claude CLI config directory (mounted read-only into container)
+CLAUDE_CONFIG_DIR=~/.claude
+
+# Telegram Bridge (optional - bot control for Vibe Terminal)
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_ALLOWED_CHAT_IDS=
 
 # Domain (for nginx SSL)
 DOMAIN=localhost
