--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,10 @@ http {
         server neural-memory:8000;
     }
 
+    upstream companion {
+        server companion:3457;
+    }
+
     # Include subdomain configs (e.g., vibe.theio.vn)
     include /etc/nginx/conf.d/*.conf;
 
@@ -71,6 +75,27 @@ http {
             proxy_pass http://pocketbase;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Companion REST API
+        location /companion/ {
+            limit_req zone=api burst=10 nodelay;
+            rewrite ^/companion/(.*) /$1 break;
+            proxy_pass http://companion;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        # Companion WebSocket (browser connections)
+        location /ws/browser/ {
+            proxy_pass http://companion;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_read_timeout 86400;
         }
 
         # Neural Memory API (semantic search)
