fix: resolve node binary full path in cli-launcher for Bun.spawn
Bun.spawn on Windows can't resolve bare "node" from PATH — needs
full path or .exe suffix. Also fix Docker: use multi-stage build
to copy node from official image, and resolve CLI script path
directly to avoid shebang resolution issues.

--- a/companion/Dockerfile
+++ b/companion/Dockerfile
@@ -1,14 +1,13 @@
-FROM oven/bun:1 AS base
+FROM node:22-slim AS node-base
 
-# Install Node.js (required for Claude CLI)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    ca-certificates \
-    && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
-    && apt-get install -y --no-install-recommends nodejs \
-    && rm -rf /var/lib/apt/lists/*
+FROM oven/bun:1
 
-# Install Claude Code CLI globally via npm
+# Copy Node.js from official image (guaranteed working binary)
+COPY --from=node-base /usr/local/bin/node /usr/local/bin/node
+COPY --from=node-base /usr/local/lib/node_modules /usr/local/lib/node_modules
+RUN ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm
+
+# Install Claude Code CLI globally
 RUN npm install -g @anthropic-ai/claude-code
 
 WORKDIR /app
