fix: revert Dockerfile to apt-based node install + add non-root user for Docker CLI
- Revert Dockerfile from multi-stage COPY to apt nodesource (fixes Bun posix_spawn)
- Add non-root user claude (Claude Code blocks bypassPermissions as root)
- Revert cli-launcher to simple ["claude", ...args] on Linux (shebang resolves node)
- Add cwd fallback when Windows paths don't exist in Linux container
- Bind mount companion/data instead of named volume (persist profiles + telegram config)
- Mount .claude and .claude.json read-write to /home/claude/

--- a/companion/Dockerfile
+++ b/companion/Dockerfile
@@ -1,14 +1,18 @@
-FROM node:22-slim AS node-base
+FROM oven/bun:1 AS base
 
-FROM oven/bun:1
+# Install Node.js (required for Claude CLI)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    ca-certificates \
+    && curl -fsSL https://deb.nodesource.com/setup_22.x | bash - \
+    && apt-get install -y --no-install-recommends nodejs \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy Node.js from official image (guaranteed working binary)
-COPY --from=node-base /usr/local/bin/node /usr/local/bin/node
-COPY --from=node-base /usr/local/lib/node_modules /usr/local/lib/node_modules
-RUN ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm
-
-# Install Claude Code CLI globally
+# Install Claude Code CLI globally via npm
 RUN npm install -g @anthropic-ai/claude-code
+
+# Create non-root user (Claude Code blocks root + bypassPermissions)
+RUN useradd -u 1000 -g 1000 -m claude 2>/dev/null || useradd -m claude
 
 WORKDIR /app
 
@@ -20,8 +24,10 @@ RUN bun install --frozen-lockfile --production
 COPY . .
 
 # Data directory for session persistence
-RUN mkdir -p /app/data
+RUN mkdir -p /app/data && chown -R claude:claude /app
 
 EXPOSE 3457
+
+USER claude
 
 CMD ["bun", "run", "src/index.ts"]
