--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
     build: ./companion
     container_name: mytrend-companion
     restart: unless-stopped
+    user: "1000:1000"
     ports:
       - "3457:3457"
     environment:
@@ -66,9 +67,11 @@ services:
       - PB_URL=http://pocketbase:8090
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN:-}
       - TELEGRAM_ALLOWED_CHAT_IDS=${TELEGRAM_ALLOWED_CHAT_IDS:-}
+      - HOME=/home/claude
     volumes:
       - ./companion/data:/app/data
-      - ${CLAUDE_CONFIG_DIR:-~/.claude}:/root/.claude:ro
+      - ${CLAUDE_CONFIG_DIR:-~/.claude}:/home/claude/.claude
+      - ${CLAUDE_CONFIG_FILE:-~/.claude.json}:/home/claude/.claude.json
     depends_on:
       pocketbase:
         condition: service_healthy
