--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,8 @@ http {
     }
 
     upstream companion {
-        server companion:3457;
+        # Companion runs natively on host (not in Docker)
+        server host.docker.internal:3457;
     }
 
     # Include subdomain configs (e.g., vibe.theio.vn)
