feat: add Research Knowledge Graph with URL auto-capture from Telegram
- PB migration: research collection with url, source, stars, tech_tags, verdict, ai_summary
- PB hook API: internal endpoints for save, dedup check, stats aggregation
- telegram-research.ts: URL detection (GitHub/npm/blog), metadata fetching, Claude Haiku AI analysis
- telegram-bridge.ts: fire-and-forget URL processing in handleTextMessage
- Frontend: /research dashboard with verdict tabs, real-time updates, comic card grid
- Sidebar: added Research link in Insights section
- Added @anthropic-ai/sdk to companion for AI analysis

--- a/companion/package.json
+++ b/companion/package.json
@@ -8,6 +8,7 @@
     "check": "bun run tsc --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.78.0",
     "hono": "^4.7.0"
   },
   "devDependencies": {
