chore: update .env.example with new PocketBase configuration options and update pocketbase dependency to version 0.22.0

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # MyTrend Environment Configuration
 # Copy this to .env and fill in your values
 
-# PocketBase
+# PocketBase (change PB_ADMIN_PASSWORD before deploy!)
 PB_ADMIN_EMAIL=admin@mytrend.local
 PB_ADMIN_PASSWORD=changeme123
 
@@ -16,6 +16,12 @@ NM_DATA_DIR=./nm_data
 # Claude Hub (optional - needed for direct API chat)
 ANTHROPIC_API_KEY=
 
+# Internal API auth (companion/research endpoints when calling PocketBase)
+COMPANION_INTERNAL_SECRET=
+
+# PocketBase sync user ID (for cron when single-user, set in docker-compose)
+# MYTREND_SYNC_USER_ID=
+
 # Vibe Companion (Docker mode)
 # Path to your Claude CLI config directory (mounted read-only into container)
 CLAUDE_CONFIG_DIR=~/.claude
@@ -23,6 +29,7 @@ CLAUDE_CONFIG_DIR=~/.claude
 # Telegram Bridge (optional - bot control for Vibe Terminal)
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_ALLOWED_CHAT_IDS=
+TELEGRAM_WEBHOOK_SECRET=
 
 # Domain (for nginx SSL)
 DOMAIN=localhost
